--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "@symfony/webpack-encore": "^4.0.0",
+        "@tailwindcss/forms": "^0.5.7",
         "autoprefixer": "^10.4.19",
         "core-js": "^3.23.0",
         "postcss": "^8.4.38",
